# fast_genfromtxt

./: .gitignore  README.md  fast_genfromtxt.c  fast_genfromtxt.h  fast_genfromtxt.py  setup.cfg  setup.py
src/: Makefile  __init__.py  fast_genfromtxt.c  fast_genfromtxt.h  fast_genfromtxt.py
