[metadata]
author = alcubierre-drive
author_email = alcubierre@drive
description = dfast version of numpy's genfromtxt/savetxt for floats
long_description = file: README.md
keywords = hpc
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: C
    Programming Language :: Python :: 3
